# unitree_rl_mjlab

./: .gitignore  setup.py  train_h1_2.sh
deploy/include/FSM/: FSMState.h
deploy/robots/h1_2/: CMakeLists.txt  main.cpp
deploy/robots/h1_2/config/: config.yaml
deploy/robots/h1_2/config/policy/velocity/v0/exported/: final_policy.onnx  policy.onnx
deploy/robots/h1_2/src/: State_RLBase.cpp
scripts/: play.py
src/assets/robots/: _utils.py
src/assets/robots/unitree_a2/: a2_constants.py
src/assets/robots/unitree_as2/: as2_constants.py
src/assets/robots/unitree_g1/: g1_23dof_constants.py  g1_constants.py
src/assets/robots/unitree_go2/: go2_constants.py
src/assets/robots/unitree_h1_2/: h1_2_constants.py
src/assets/robots/unitree_h2/: h2_constants.py
src/assets/robots/unitree_r1/: r1_constants.py
src/tasks/velocity/config/h1_2/: rl_cfg.py
